--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -43,7 +43,7 @@
         </div>
 
         <div id="mobileNav" class="nav-mobile hidden">
-            <div class="nav-mobile-content">
+            <div class="nav-mobile-content" >
                 <a href="#home" class="nav-mobile-link">Home</a>
                 <a href="#about" class="nav-mobile-link">About</a>
                 <a href="#services" class="nav-mobile-link">Services</a>
@@ -55,9 +55,7 @@
     </header>
 
     <main class="main-content">
-        <section id="home" class="section hero-section">
-            <div class="hero-content fade-up">
-                <h1 class="hero-title">
+        <section id="home" class="sectio  itle">
                     Hi — I'm <span class="text-primary">MELVIN OKETCHO</span>
                 </h1>
 
@@ -189,7 +187,7 @@
                     <div class="card education-card">
                         <div class="eduaction-content">
                             <h3>2022-2023</h1>
-                            <p class="education-institution">Mother Kevin College Mabira</p>
+                            <p class="education-institution">st Marys colleage lugazi</p>
                             <p class="education-degree">Uganda Advanced Certificate of Education (UACE)</p>                  
                     </div>
                 </div>
