--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <section id="education" class="section education-section">
             <div class="section-container-small">
                 <h2 class="section-title text-primary text-center">Education</h2>
-                    <div class="card education-card">
+                    <div class="education-card">
                         <div class="eduaction-content">
                             <h3>2024-Present</h1>
                             <p class="education-institution">ISBAT University</p>
@@ -184,7 +184,7 @@
                         </div>
                     </div>
 
-                    <div class="card education-card">
+                    <div class="education-card">
                         <div class="eduaction-content">
                             <h3>2022-2023</h1>
                             <p class="education-institution">st Marys colleage lugazi</p>
@@ -192,10 +192,10 @@
                     </div>
                 </div>
 
-                <div class="card education-card" >
+                <div class="education-card" >
                         <div class="eduaction-content">
                             <h3>2017-2020</h1>
-                            <p class="education-institution">Mother Kevin College Mabira</p>
+                            <p class="education-institution">St. Marys' College Lugazi</p>
                             <p class="education-degree">Uganda Certificate of Education (UCE)</p>                  
                     </div>
                 </div>
